# opengl_hw_task1

./: CMakeLists.txt  README.md  main.cpp
src/cpp/: exception.cpp  exception.h  figure.cpp  figure.h  files.cpp  files.h  load_file.cpp  load_file.h  main.cpp  opengl.cpp  opengl.h  utils.cpp  utils.h
src/glsl/: fragment.glsl  vertex.glsl
